Feat: Completion labs

--- a/second year/third semester/UID/lab7/style.css
+++ b/second year/third semester/UID/lab7/style.css
@@ -135,3 +135,10 @@ p[contentEditable] {
   box-shadow: 0 0 0 1px red;
   outline: none;
 }
+.text-ex-wrap{
+  word-wrap: break-word; /* Перенос слов */ 
+}
+.text-ex-space{
+  white-space: nowrap; /* Запрещаем перенос слов */
+}
+     
